--- a/index.html
+++ b/index.html
@@ -23,13 +23,13 @@
         <div class="collapse navbar-collapse" id="navbarSupportedContent">
             <ul class="nav navbar-nav navbar-right">
                 <li class="nav-item">
-                    <a class="nav-link" href="#">About</a>
+                    <a class="nav-link" href="index.html">About</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="#">Portfolio</a>
+                    <a class="nav-link" href="portfolio.html">Portfolio</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="#">Contact</a>
+                    <a class="nav-link" href="contact.html">Contact</a>
                 </li>
             </ul>
         </div>
@@ -43,8 +43,9 @@
                 </div>
                 <div class="row">
                     <div class="col-md-2">
-                        <img src="http://pluspng.com/img-png/om-nom-png-om-nom-png-480.png" alt="Picture of Om Nom" class="img-thumbnail">
+                        <img src="http://placehold.it/150x150" alt="Placeholder" class="img-thumbnail">  <br><br>
                     </div>
+                    
                     <div class="col-md-10">
                         <p>
                             Lorem ipsum dolor sit amet, consectetur adipiscing elit. Quisque dignissim, felis ut dictum
@@ -134,7 +135,7 @@
 
 
         </div>
-        <hr> 
+        <hr>
         <blockquote class="blockquote text-center sticky-bottom">
 
                 <p class="mb-0">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Integer posuere erat a ante.</p>
