added footer to portfolio and contact

--- a/contact.html
+++ b/contact.html
@@ -34,7 +34,12 @@
             </nav>
 
 
-    
+            <hr>
+        <blockquote class="blockquote text-center sticky-bottom">
+
+                <p class="mb-0">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Integer posuere erat a ante.</p>
+                <footer class="blockquote-footer">Someone famous in <cite title="Source Title">Source Title</cite></footer>
+            </blockquote>
 </body>
 
 
