added dummy text to portfolio, added form to contact

--- a/portfolio.html
+++ b/portfolio.html
@@ -81,7 +81,7 @@
                             <img class="card-img-top" src="https://via.placeholder.com/300" alt="Card image cap">
                             <div class="card-body">
                                 <p class="card-text">Some quick example text to build on the card title and make up the
-                                    bulk of the card's content.</p>
+                                    bulk of the card's content. Test text to see what happens when it exceeds the other cards on the same row.</p>
                             </div>
                         </div>
                     </div>
