added container to form in contact

--- a/contact.html
+++ b/contact.html
@@ -32,6 +32,7 @@
                     </ul>
                 </div>
             </nav>
+        <div class="container">
 
             <form>
                     <div class="form-group">
@@ -63,7 +64,7 @@
                       <textarea class="form-control" id="exampleFormControlTextarea1" rows="3"></textarea>
                     </div>
                   </form>
-
+</div>
 
             <hr>
         <blockquote class="blockquote text-center sticky-bottom">
