added link to trivia game, added image

--- a/portfolio.html
+++ b/portfolio.html
@@ -65,9 +65,9 @@
                     </div>
                     <div class="col-md-4">
                         <div class="card" style="width: 18rem;">
-                            <a href="#">
+                            <a href="https://zayazaw67.github.io/TriviaGame-Basic/">
                             <img class="card-img-top"
-                                src="https://upload.wikimedia.org/wikipedia/commons/thumb/8/8b/Big_Shamu_San_Diego_by_Patty_Mooney.jpg/300px-Big_Shamu_San_Diego_by_Patty_Mooney.jpg"
+                                src="assets/Images/trivia.png"
                                 alt="Card image cap"> </a>
                             <div class="card-body">
                                 <p class="card-text">Some quick example text to build on the card title and make up the
