--- a/portfolio.html
+++ b/portfolio.html
@@ -70,8 +70,7 @@
                                 src="assets/Images/trivia.png"
                                 alt="Card image cap"> </a>
                             <div class="card-body">
-                                <p class="card-text">Some quick example text to build on the card title and make up the
-                                    bulk of the card's content.</p>
+                                <p class="card-text">Short, basic, timed trivia game.</p>
                             </div>
                         </div>
                     </div>
@@ -80,10 +79,10 @@
                 <div class="row">
                     <div class="col-md-4">
                         <div class="card" style="width: 18rem;">
-                            <img class="card-img-top" src="https://via.placeholder.com/300" alt="Card image cap">
+                            <a href="https://zayazaw67.github.io/API-Homework/">
+                            <img class="card-img-top" src="assets/Images/GIPHY.png" alt="Screencap of Page"></a>
                             <div class="card-body">
-                                <p class="card-text">Some quick example text to build on the card title and make up the
-                                    bulk of the card's content. Test text to see what happens when it exceeds the other cards on the same row.</p>
+                                <p class="card-text">GIPHY API. Add topics and search for gifs!</p>
                             </div>
                         </div>
                     </div>
