linked project 1, added images

--- a/index.html
+++ b/index.html
@@ -5,9 +5,15 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
-<script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js" integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q" crossorigin="anonymous"></script>
-<script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js" integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl" crossorigin="anonymous"></script>
+    <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js"
+        integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN"
+        crossorigin="anonymous"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js"
+        integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q"
+        crossorigin="anonymous"></script>
+    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js"
+        integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl"
+        crossorigin="anonymous"></script>
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css"
         integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
     <title>About Me</title>
@@ -16,7 +22,7 @@
 
 <body>
 
-<!-- float-right does not make the nav bar alight on the right. -->
+    <!-- float-right does not make the nav bar alight on the right. -->
 
     <nav class="navbar navbar-expand-lg navbar-dark bg-dark sticky-top">
         <span class="navbar-brand mb-1 h1">Zaya Zaw</span>
@@ -47,47 +53,20 @@
                 </div>
                 <div class="row">
                     <div class="col-md-2">
-                        <img src="http://placehold.it/150x150" alt="Placeholder" class="img-thumbnail">  <br><br>
+                        <img src="http://placehold.it/150x150" alt="Placeholder" class="img-thumbnail"> <br><br>
                     </div>
-                    
+
                     <div class="col-md-10">
                         <p>
-                            Lorem ipsum dolor sit amet, consectetur adipiscing elit. Quisque dignissim, felis ut dictum
-                            tristique,
-                            nibh erat feugiat libero, sit amet fringilla mauris velit in mi. Duis tempus felis vitae
-                            felis vulputate pretium. Nullam commodo, est ac auctor ornare, eros nisi fringilla sem,
-                            non pulvinar tortor lorem sit amet sem. Aenean quis erat facilisis, porttitor ex cursus,
-                            luctus enim. Curabitur et metus in lacus tristique sagittis et in lorem. Nunc id nisi et
-                            neque fringilla ultricies. Aenean at feugiat elit, a posuere justo. Pellentesque egestas
-                            dolor et nisi venenatis, nec fermentum urna fringilla. Etiam efficitur porta purus, id
-                            posuere sem congue a.
+                            Zaya Zaw. 25. Male. Owns that cat on the left. Excellent at being lazy. Decent at video
+                            gaming, and terrible at school, but exceptional at failing to get up in the morning. 
+                            <p>Check out my sick portfolio for some sample demonstration of my understanding of
+                                Javascript, HTML, CSS, and CSS frameworks.</p>
                         </p>
                     </div>
                 </div>
                 <div class="row">
                     <div class="col-md-12">
-                        <p>
-                            Lorem ipsum dolor sit amet, consectetur adipiscing elit. Quisque dignissim, felis ut dictum
-                            tristique,
-                            nibh erat feugiat libero, sit amet fringilla mauris velit in mi. Duis tempus felis vitae
-                            felis vulputate pretium. Nullam commodo, est ac auctor ornare, eros nisi fringilla sem,
-                            non pulvinar tortor lorem sit amet sem. Aenean quis erat facilisis, porttitor ex cursus,
-                            luctus enim. Curabitur et metus in lacus tristique sagittis et in lorem. Nunc id nisi et
-                            neque fringilla ultricies. Aenean at feugiat elit, a posuere justo. Pellentesque egestas
-                            dolor et nisi venenatis, nec fermentum urna fringilla. Etiam efficitur porta purus, id
-                            posuere sem congue a.
-                        </p>
-                        <p>
-                            Lorem ipsum dolor sit amet, consectetur adipiscing elit. Quisque dignissim, felis ut dictum
-                            tristique,
-                            nibh erat feugiat libero, sit amet fringilla mauris velit in mi. Duis tempus felis vitae
-                            felis vulputate pretium. Nullam commodo, est ac auctor ornare, eros nisi fringilla sem,
-                            non pulvinar tortor lorem sit amet sem. Aenean quis erat facilisis, porttitor ex cursus,
-                            luctus enim. Curabitur et metus in lacus tristique sagittis et in lorem. Nunc id nisi et
-                            neque fringilla ultricies. Aenean at feugiat elit, a posuere justo. Pellentesque egestas
-                            dolor et nisi venenatis, nec fermentum urna fringilla. Etiam efficitur porta purus, id
-                            posuere sem congue a.
-                        </p>
                         <p>
                             Lorem ipsum dolor sit amet, consectetur adipiscing elit. Quisque dignissim, felis ut dictum
                             tristique,
@@ -138,13 +117,13 @@
         </div>
 
 
-        </div>
-        <hr>
-        <blockquote class="blockquote text-center sticky-bottom">
+    </div>
+    <hr>
+    <blockquote class="blockquote text-center sticky-bottom">
 
-                <p class="mb-0">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Integer posuere erat a ante.</p>
-                <footer class="blockquote-footer">Someone famous in <cite title="Source Title">Source Title</cite></footer>
-            </blockquote>
+        <p class="mb-0">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Integer posuere erat a ante.</p>
+        <footer class="blockquote-footer">Someone famous in <cite title="Source Title">Source Title</cite></footer>
+    </blockquote>
 
 </body>
 
