--- a/portfolio.html
+++ b/portfolio.html
@@ -60,16 +60,18 @@
                             </div>
                         </div>
                     </div>
-
                     <div class="col-md-4">
                         <div class="card" style="width: 18rem;">
-                            <a href="https://zayazaw67.github.io/unit-4-game/"><img class="card-img-top"
-                                    src="assets/Images/gem.png" alt="Card image cap"></a>
+                            <a href="https://safe-depths-87257.herokuapp.com/">
+                            <img class="card-img-top"
+                                src="assets/Images/moneymanager.png"
+                                alt="Preview of money manager"></a>
                             <div class="card-body">
-                                <p class="card-text">Crystal Clicker Game!</p>
+                                <p class="card-text">Save your money with this app! Then use your saved money and add it to a wishlist.</p>
                             </div>
                         </div>
                     </div>
+
                     <div class="col-md-4">
                         <div class="card" style="width: 18rem;">
                             <a href="https://zayazaw67.github.io/TriviaGame-Basic/">
@@ -166,14 +168,14 @@
                             </div>
                         </div>
                     </div>
+
+
                     <div class="col-md-4">
                         <div class="card" style="width: 18rem;">
-                            <img class="card-img-top"
-                                src="https://upload.wikimedia.org/wikipedia/commons/thumb/8/8b/Big_Shamu_San_Diego_by_Patty_Mooney.jpg/300px-Big_Shamu_San_Diego_by_Patty_Mooney.jpg"
-                                alt="Card image cap">
+                            <a href="https://zayazaw67.github.io/unit-4-game/"><img class="card-img-top"
+                                    src="assets/Images/gem.png" alt="Card image cap"></a>
                             <div class="card-body">
-                                <p class="card-text">Some quick example text to build on the card title and make up the
-                                    bulk of the card's content.</p>
+                                <p class="card-text">Crystal Clicker Game!</p>
                             </div>
                         </div>
                     </div>
